--- a/assets/modules/cooperative/views/email-form.html
+++ b/assets/modules/cooperative/views/email-form.html
@@ -19,8 +19,8 @@
     			<label class="control-label">Nombre</label>
     			<input name="name" type="input" class="form-control" ng-model="email.data.name" required>
     		
-                <div class="error" ng-show="email.form.name.$invalid && email.form.submitted">
-                    <small class="error" ng-show="email.form.name.$error.required">
+                <div class="bg-danger error" ng-show="email.form.name.$invalid && email.form.submitted">
+                    <small ng-show="email.form.name.$error.required">
                         Ingrese un nombre
                     </small>
                 </div>
@@ -29,16 +29,16 @@
     	</div>
 
         <div class="row">
-            <div class="form-group col-sm-8">
+            <div class="form-group col-sm-6">
                 <label class="control-label">E-mail</label>
                 <input name="email" type="email" class="form-control" ng-model="email.data.email" required>
             
-                <div class="error" ng-show="email.form.email.$invalid && email.form.submitted">
-                    <small class="error" ng-show="email.form.email.$error.required">
+                <div class="bg-danger error" ng-show="email.form.email.$invalid && email.form.submitted">
+                    <small ng-show="email.form.email.$error.required">
                         Ingrese un E-mail
                     </small>
 
-                    <small class="error" ng-show="email.form.email.$error.email">
+                    <small ng-show="email.form.email.$error.email">
                         Ingrese un E-mail valido
                     </small>
                 </div>
@@ -46,13 +46,13 @@
         </div>
 
         <div class="row">
-            <div class="form-group col-sm-8">
+            <div class="form-group col-sm-6">
                 <label class="control-label">Tipo </label>
                 <select class="form-control" ng-options="item as item.display_name for item in email.data.options_type track by item.value" ng-model="email.data.type_selected"  required="true">
                     <option value="">Seleccione tipo</option>
                 </select>
-                <div class="error" ng-show="email.form.email.$invalid && email.form.submitted">
-                    <small class="error" ng-show="email.form.email.$error.required">
+                <div class="bg-danger error" ng-show="email.form.email.$invalid && email.form.submitted">
+                    <small ng-show="email.form.email.$error.required">
                         Seleccione un tipo de correo
                     </small>
                 </div>
