--- a/assets/modules/cooperative/views/social-form.html
+++ b/assets/modules/cooperative/views/social-form.html
@@ -23,20 +23,30 @@
 
 <div ng-show="!social.form.success">
 
-    <form  name="social.form" class="form-horizontal" role="form" ng-submit="social.submit()">
+    <form novalidate name="social.form" class="form-horizontal" role="form" ng-submit="social.submit()">
         
         <div class="form-group">            
             <label for="inputEmail3" class="col-sm-2 control-label"> Nombre:</label>
             <div class="col-sm-5">
-                <input ng-model="social.data.name" type="text" class="form-control" placeholder="Nombre de la nueva Red Social" required="true" >
+                <input name="name" ng-model="social.data.name" type="text" class="form-control" placeholder="Nombre de la nueva Red Social" required>
+                <div class="bg-danger error" ng-show="social.form.name.$invalid && social.form.submitted">
+                    <small ng-show="social.form.name.$error.required">
+                        Ingrese un nombre.
+                    </small>
+                </div>
             </div>            
         </div>
 
         <div class="form-group">            
             <label for="inputEmail3" class="col-sm-2 control-label"> URL:</label>
             <div class="col-sm-5">
-                <input ng-model="social.data.url" type="text" class="form-control" placeholder="Url" required="true" >
-            </div>            
+                <input name="url" ng-model="social.data.url" type="text" class="form-control" placeholder="Url" required>
+                <div class="bg-danger error" ng-show="social.form.url.$invalid && social.form.submitted">
+                    <small ng-show="social.form.url.$error.required">
+                        Ingrese una url.
+                    </small>
+                </div>
+            </div>
         </div>
 
         <div class="form-group">
@@ -45,6 +55,11 @@
                 <select class="form-control" ng-options="item as item.display_name for item in social.data.options track by item.value" ng-model="social.data.type_selected"  required="true">                    
                     <option value="">Seleccione una red social</option>
                 </select>
+                <div class="bg-danger error" ng-show="social.form.url.$invalid && social.form.submitted">
+                    <small ng-show="social.form.url.$error.required">
+                        Selecciona una red social.
+                    </small>
+                </div>
             </div>
         </div>
 
