--- a/assets/modules/groups/views/form.html
+++ b/assets/modules/groups/views/form.html
@@ -17,15 +17,16 @@
 
         <div class="row">
             <div class="form-group col-sm-8">
-                <label for="inputEmail3" class="control-label">Nombre del grupo</label>
+                <label class="control-label">Nombre del grupo</label>
                 <input name="name" type="input" class="form-control" ng-model="group.data.name" required>
-                <div class="error" ng-show="group.form.name.$invalid && group.form.submitted">
-                    <small class="error" ng-show="group.form.name.$error.required">
-                        Ingrese un nombe
+                <div class="bg-danger error" ng-show="group.form.name.$invalid && group.form.submitted">
+                    <small ng-show="group.form.name.$error.required">
+                        Ingrese un nombre.
                     </small>
                 </div>
             </div>
         </div>
+
 
     	<div class="row">
     		<div class="form-group col-xs-12">
