--- a/assets/modules/user/views/form.html
+++ b/assets/modules/user/views/form.html
@@ -18,8 +18,8 @@
             <div class="form-group col-sm-8">
                 <label class="control-label">Documento</label>
                 <input name="username" type="input" class="form-control" ng-model="user.data.username" required>
-                <div class="error" ng-show="user.form.username.$invalid && user.form.submitted">
-                    <small class="error" ng-show="user.form.username.$error.required">
+                <div class="bg-danger error" ng-show="user.form.username.$invalid && user.form.submitted">
+                    <small ng-show="user.form.username.$error.required">
                         Ingrese un documento para el asociado
                     </small>
                 </div>
@@ -30,8 +30,8 @@
             <div class="form-group col-sm-8">
                 <label class="control-label">Nombre</label>
                 <input name="name" type="input" class="form-control" ng-model="user.data.name" required>
-                <div class="error" ng-show="user.form.name.$invalid && user.form.submitted">
-                    <small class="error" ng-show="user.form.name.$error.required">
+                <div class="bg-danger error" ng-show="user.form.name.$invalid && user.form.submitted">
+                    <small ng-show="user.form.name.$error.required">
                         Ingrese un nombre para el asociado
                     </small>
                 </div>
@@ -41,8 +41,8 @@
             <div class="form-group col-sm-8">
                 <label class="control-label">Email</label>
                 <input name="email" type="input" class="form-control" ng-model="user.data.email" required>
-                <div class="error" ng-show="user.form.email.$invalid && user.form.submitted">
-                    <small class="error" ng-show="user.form.email.$error.required">
+                <div class="bg-danger error" ng-show="user.form.email.$invalid && user.form.submitted">
+                    <small ng-show="user.form.email.$error.required">
                         Ingrese un E-mail
                     </small>
                 </div>
@@ -56,8 +56,8 @@
                     <option value="F">Femenino</option>
                     <option value="M">Masculino</option>
                 </select>
-                <div class="error" ng-show="user.form.gender.$invalid && user.form.submitted">
-                    <small class="error" ng-show="user.form.gender.$error.required">
+                <div class="bg-danger error" ng-show="user.form.gender.$invalid && user.form.submitted">
+                    <small ng-show="user.form.gender.$error.required">
                         Seleccione un género
                     </small>
                 </div>
@@ -68,8 +68,8 @@
             <div class="form-group col-sm-8">
                 <label class="control-label">Fecha de nacimiento</label>
                 <input name="birthdate" type="date" class="form-control" ng-model="user.data.birthdate" required>
-                <div class="error" ng-show="user.form.birthdate.$invalid && user.form.submitted">
-                    <small class="error" ng-show="user.form.birthdate.$error.required">
+                <div class="bg-danger error" ng-show="user.form.birthdate.$invalid && user.form.submitted">
+                    <small ng-show="user.form.birthdate.$error.required">
                         Ingrese una fecha de nacimiento 
                     </small>
                 </div>
