fix large images in home

--- a/assets/modules/home/views/home.html
+++ b/assets/modules/home/views/home.html
@@ -1,6 +1,6 @@
 
 <div class="user-box">    
-    <img src="{{home.MEDIA}}/{{home.cooperative_data.logo}}" alt="Logo" class="pull-right"/>        
+    <img src="{{home.MEDIA}}/{{home.cooperative_data.logo}}" alt="Logo" class="pull-right" width="171" height="141"/>        
 </div>
 <div class="user-box ">    
     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>     
