--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -4,6 +4,15 @@
 @import "statistic";
 @import "update";
 
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+}
+.container{
+   min-height: 100%;
+}
 
 body {
     padding-top: 50px;
@@ -109,6 +118,11 @@ body {
 .asociados-logo{  
   width: 37px;
   height: 37px;
+}
+
+.btn-login{
+  background-color: #D8852E !important;
+  border-color: transparent  !important;
 }
 
 .navbar-brand-header:hover  .asociados-logo, .asociados-logo:hover {
