--- a/assets/modules/auth/views/login.html
+++ b/assets/modules/auth/views/login.html
@@ -1,10 +1,15 @@
 
 
-<div class="text-center login-page">
+<div class=" text-center login-page">
 
     <img src="{{login.static}}/img/logo.png">
     
-    <h3>Bienvenido</h3>
+    <h2>
+        ¡Bienvenido!
+       
+    </h2>
+     <h5>Panel de administración para clientes</h5>
+
 
     <div ng-show="login.error" class="alert alert-danger" role="alert">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -17,14 +22,24 @@
     </div>
 
     <form ng-show="login.form" class="form-signin" role="form" ng-submit="login.login()">
+
         <div class="form-group">
-            <input ng-model="login.username" type="text" class="form-control" placeholder="Usuario" required="" autofocus="">
+            <div class="input-group">
+                <div class="input-group-addon"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span></div>
+                <input ng-model="login.username" type="text" class="form-control" placeholder="Usuario" required="" autofocus="">
+            </div>
         </div>
+
         <div class="form-group">
-            <input ng-model="login.password" type="password" class="form-control" placeholder="Contraseña" required="">
+            <div class="input-group">
+                <div class="input-group-addon"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></div>
+                <input ng-model="login.password" type="password" class="form-control" placeholder="Contraseña" required="">
+            </div>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+
+        <button class="btn btn-lg btn-primary btn-block btn-login" type="submit">Ingresar</button>
     </form>
+
 
 </div>
 
