Visual changes only

--- a/assets/modules/creditRequest/views/view.html
+++ b/assets/modules/creditRequest/views/view.html
@@ -7,11 +7,10 @@
 </ol>
 
 <div ng-show="creditView.form.success">
-    <div class="alert alert-success" role="alert">Elemento editado correctamente.</div>
-    <a href="#/request/credit" class="btn btn-warning">Regresar</a>
+    <div class="alert alert-success" role="alert">Elemento editado correctamente.</div>   
 </div>
 
-<div ng-show="!creditView.form.success">   
+<div >   
     <form class="form-horizontal" name="creditView.form" role="form" ng-submit="creditView.submit()">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Crédito</label>
