--- a/assets/css/notification.less
+++ b/assets/css/notification.less
@@ -44,4 +44,12 @@
             }
         } 
     }
+
+    .thumbs-notification-blanck{
+        width:160px; 
+        height:160px; 
+        border-style: dotted; 
+        border-color: currentColor;    
+        border-radius: 20px;
+    }
 }
