--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -18,22 +18,25 @@
 
             <div class="row">
                 
-                <div class="col-sm-3">
-                    <label for="inputEmail3" class="control-label">Imágen (pre-visualización)</label>
+                <div class="col-sm-4">
+                    <label for="inputEmail3" class="control-label">Imágen (pre-visualización) <br></label>
+                    <br>
                     <div class="row">
                         <div class="col-sm-3">
                             
                         </div>
-                        <div class="col-sm-9">                            
+                        <div class="col-sm-9">       
+                            <br>                     
                             <div ng-if="notification.data.image">                        
                                 <img class="img-thumbnail"  src="{{notification.MEDIA}}/{{notification.data.image}}" alt="">
                             </div>
 
                             <div ng-if="!notification.data.image">                        
-                                <div style="width:160px; height:160px; border-style: dashed; border-color: currentColor;"> <h3 class="text-center">Imágen no cargada</h3></div>
+                                <div class="thumbs-notification-blanck"> <h5 class="text-center">Imágen no cargada</h5></div>
                             </div>
+                            <br>
                         </div>
-                        <div class="col-sm-3"></div>
+                        <div class="col-sm-2"></div>
                     </div>
 
                     <div class="row">
@@ -48,7 +51,7 @@
                     </div>
                 </div>
                 
-                <div class="col-sm-9">
+                <div class="col-sm-8">
                     <div class="row">
                         <div class="form-group col-sm-12">
                             <label for="inputEmail3" class="control-label">Título</label>
