finall changes new pages

--- a/assets/css/auth.less
+++ b/assets/css/auth.less
@@ -1,12 +1,13 @@
 .login-page{
-    width: 21em;
+    padding: 5em;
+    border: 1px solid #d6d6d6;
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
 
     margin:auto;
-    position: absolute;
-    left: 40%;
-    top: 20%;
+    position: absolute;    
+    margin-top: 10%;
    
-
     h3{
         margin:40px auto 20px;
         font-weight:normal;
@@ -17,6 +18,22 @@
         margin:25px auto;
     }
 
+    .btn-login{
+      background-color: #D8852E !important;
+      border-color: transparent  !important;
+    }
+
+    .btn-login:hover{
+      background-color: transparent!important;
+      border-color: #D8852E  !important;
+      color: #D8852E;
+      transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -ms-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+    }
+
     
 }
 
@@ -25,3 +42,4 @@ h5 {
     font-weight: 400 !important;
     font-size: 15.5px !important;
 }
+
