--- a/assets/modules/page/views/form.html
+++ b/assets/modules/page/views/form.html
@@ -69,7 +69,7 @@
             <div class="form-group col-sm-10">
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" ng-model="page.data.published"> Publicar
+                        <input type="checkbox" ng-model="page.data.published"> Visible
                     </label>
                 </div>
             </div>
