--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,11 +22,13 @@
   box-shadow: 0 8px 6px -6px #000;
 }
 .login-page {
-  width: 21em;
+  padding: 5em;
+  border: 1px solid #d6d6d6;
+  -webkit-border-radius: 5px;
+  border-radius: 10px;
   margin: auto;
   position: absolute;
-  left: 40%;
-  top: 20%;
+  margin-top: 10%;
 }
 .login-page h3 {
   margin: 40px auto 20px;
@@ -34,6 +36,20 @@
 }
 .login-page .form-signin {
   margin: 25px auto;
+}
+.login-page .btn-login {
+  background-color: #D8852E !important;
+  border-color: transparent  !important;
+}
+.login-page .btn-login:hover {
+  background-color: transparent!important;
+  border-color: #D8852E  !important;
+  color: #D8852E;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 h5 {
   font-weight: 400 !important;
@@ -247,10 +263,6 @@ body {
   width: 37px;
   height: 37px;
 }
-.btn-login {
-  background-color: #D8852E !important;
-  border-color: transparent  !important;
-}
 .navbar-brand-header:hover .asociados-logo,
 .asociados-logo:hover {
   -webkit-animation: spin 4s linear infinite;
@@ -290,4 +302,54 @@ body {
   to {
     stroke-dashoffset: 0;
   }
+}
+.angular-ui-tree-handle {
+  background: #f8faff;
+  border: 1px solid #dae2ea;
+  color: #7c9eb2;
+  padding: 10px 10px;
+}
+.angular-ui-tree-handle:hover {
+  color: #438eb9;
+  background: #f4f6f7;
+  border-color: #dce2e8;
+}
+.angular-ui-tree-placeholder {
+  background: #f0f9ff;
+  border: 2px dashed #bed2db;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+tr.angular-ui-tree-empty {
+  height: 100px;
+}
+.group-title {
+  background-color: #687074 !important;
+  color: #FFF !important;
+}
+/* --- Tree --- */
+.tree-node {
+  border: 1px solid #dae2ea;
+  background: #f8faff;
+  color: #7c9eb2;
+}
+.nodrop {
+  background-color: #f2dede;
+}
+.tree-node-content {
+  margin: 10px;
+}
+.tree-handle {
+  padding: 10px;
+  background: #428bca;
+  color: #FFF;
+  margin-right: 10px;
+}
+.angular-ui-tree-placeholder {
+  background: #f0f9ff;
+  border: 2px dashed #bed2db;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
