--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -91,7 +91,7 @@
         
         <div  ng-if="pageList.data.parent">
           <div class="form-group col-sm-9">
-            <label for="inputEmail3" class="control-label">Página padre</label>
+            <label for="inputEmail3" class="control-label">Página padre </label>
             <input name="title" type="input" class="form-control" ng-model="pageList.data.parentName" ng-readonly="true" >
           </div>
         </div>
@@ -105,7 +105,7 @@
         <div  ng-show="pageList.data.type == 2">
             <div class="form-group col-sm-12">
                 <label for="inputEmail3" class="control-label">Contenido</label>
-                <textarea ui-tinymce="pageList.tinymceOptions" name="content" class="form-control" rows="6" ng-model="page.data.content"></textarea>
+                <textarea ui-tinymce="pageList.tinymceOptions" name="content" class="form-control" rows="6" ng-model="pageList.data.content"></textarea>
             </div>
         </div>
 
