--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -89,7 +89,7 @@
         </div>
         
         
-        <div  ng-if="pageList.data.parent">
+        <div >
           <div class="form-group col-sm-9">
             <label for="inputEmail3" class="control-label">Página padre </label>
             <input name="title" type="input" class="form-control" ng-model="pageList.data.parentName" ng-readonly="true" >
