--- a/assets/modules/groups/views/fill.html
+++ b/assets/modules/groups/views/fill.html
@@ -16,7 +16,7 @@
 
         <div class="row">
             <div class="form-group col-sm-8">
-                <label for="inputEmail3" class="control-label">Cargr nuevo CSV de documentos</label>
+                <label for="inputEmail3" class="control-label">Cargr nuevo CSV de documentos (Separado por ';')</label>
                 <input name="name" type="file" accept=".csv" file-model='file'>
             </div>
         </div>
