--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -234,3 +234,7 @@ tr.angular-ui-tree-empty {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+.angular-ui-tree-handle {
+    cursor:default !important;
+}
