Added polls to create and edit

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -238,3 +238,11 @@ tr.angular-ui-tree-empty {
 .angular-ui-tree-handle {
     cursor:default !important;
 }
+// Poll
+.answer-action-buttons{
+    margin-top:25px
+}
+.save-poll{padding-top: 20px;}
+.separated-line{
+    border-bottom:1px solid #e7e7e7
+}
