--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -44,6 +44,7 @@
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="#/content/notification">Notificaciones</a></li>
                     <li><a href="#/content/page">Páginas</a></li>
+                    <li><a href="#/poll">Encuestas</a></li>
                 </ul>
             </li>
 
