--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -356,3 +356,12 @@ tr.angular-ui-tree-empty {
 .angular-ui-tree-handle {
   cursor: default !important;
 }
+.answer-action-buttons {
+  margin-top: 25px;
+}
+.save-poll {
+  padding-top: 20px;
+}
+.separated-line {
+  border-bottom: 1px solid #e7e7e7;
+}
