--- a/assets/modules/poll/views/list.html
+++ b/assets/modules/poll/views/list.html
@@ -14,7 +14,7 @@
 
     filters="['search']" 
 
-    actions="['add', 'questions', 'edit', 'delete']"
+    actions="['add', 'edit', 'delete', 'view']"
     
     rest="polls"
     >
