--- a/assets/modules/poll/views/form.html
+++ b/assets/modules/poll/views/form.html
@@ -52,7 +52,7 @@
     <div class="row">
         <div class="col-xs-8">
             <hr class="separated-line">
-        </div>
+        </div> 
     </div>
     <!-- New Question -->
     <form novalidate name="questi" class="form" ng-submit="answerToQuestion(quest, 'new')">
@@ -64,14 +64,14 @@
             </div>
             <div class="form-group col-xs-8">
                 <label class="control-label">Tipo de pregunta:</label>
-                <select class="form-control" required ng-model="quest.type" ng-options="type.name for type in typePoll" ng-change="showOptions(quest.type)">
+                <select class="form-control" required ng-model="quest.actualType" ng-options="actualType.name for actualType in typePoll" ng-change="showOptions(quest.actualType)">
                 </select>
             </div>
         </div>
         <div class="row" ng-if="optionsAnswer == 1">
             <div class="form-group col-xs-4">
                 <label class="control-label">Escribe la segunda opción</label>
-                <input type="text" class="form-control" name="option2" ng-model="quest.option2">
+                <input type="text" class="form-control" name="option2" ng-model="quest.option1">
             </div>
             <div class="form-group col-xs-4">
                 <label class="control-label">Escribe la segunda opción</label>
@@ -100,10 +100,19 @@
                     <select class="form-control" required ng-model="quest.actualType" ng-options="type.name for type in typePoll" ng-change="showOptions(quest.type)">
                     </select>
                     <div class="row">
-                        <div class="form-group col-xs-6" ng-if="quest.type == 2" ng-repeat="options in quest.option_set">
+                        <div class="form-group col-xs-6" ng-if="quest.type == 2 || quest.type == 3" ng-repeat="options in quest.option_set">
                             <h6>Opciones de respuesta</h6>
-                            <!--<label class="control-label">Opciones de respuesta</label>-->
-                            <input type="text" class="form-control" name="option2" ng-model="options.content" ng-if="options.content == '' || options.content != ''">
+                            <input type="text" class="form-control" name="options" ng-model="options.content">
+                        </div>
+                    </div>
+                    <div class="row" ng-if="addOptions">
+                        <div class="form-group col-xs-6" ng-if="quest.type == 2 || quest.type == 3">
+                            <h6>Opciones de respuesta</h6>
+                            <input type="text" class="form-control" name="options" ng-model="quest.option1">
+                        </div>
+                        <div class="form-group col-xs-6" ng-if="quest.type == 2 || quest.type == 3">
+                            <h6>Opciones de respuesta</h6>
+                            <input type="text" class="form-control" name="options" ng-model="quest.option2">
                         </div>
                     </div>
                     <div class="row">
