--- a/assets/modules/poll/views/form.html
+++ b/assets/modules/poll/views/form.html
@@ -20,7 +20,7 @@
                 <input name="name" type="input" class="form-control" ng-model="form.name" required>
                 <div class="bg-danger error" ng-show="poll.form.pollname.$invalid && poll.form.submitted">
                     <small ng-show="poll.form.pollname.$error.required">
-                        Ingresa el nombre de la encuesta.!
+                        Ingresa el nombre de la encuesta.
                     </small>
                 </div>
             </div>
