--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -365,3 +365,30 @@ tr.angular-ui-tree-empty {
 .separated-line {
   border-bottom: 1px solid #e7e7e7;
 }
+.image-review .content-image-to-crop {
+  width: 300px;
+  height: 400px;
+  overflow: hidden;
+}
+.image-review img-crop {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+.image-review img-crop canvas {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  outline: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  /* mobile webkit */
+}
+.image-review #croppedImage {
+  visibility: hidden;
+}
+.image-review .cropped-actions {
+  margin-top: 10px;
+}
