--- a/assets/modules/user/views/form.html
+++ b/assets/modules/user/views/form.html
@@ -13,76 +13,102 @@
 <div ng-show="!user.no_form_show">
 
     <form novalidate name="user.form" class="form" role="form" ng-submit="user.submit()">
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="row" ng-show="user.action == 'new'">
+                    <div class="form-group col-sm-12">
+                        <label class="control-label">Documento</label>
+                        <input name="username" type="input" class="form-control" ng-model="user.data.username" required>
+                        <div class="bg-danger error" ng-show="user.form.username.$invalid && user.form.submitted">
+                            <small ng-show="user.form.username.$error.required">
+                                Ingrese un documento para el asociado
+                            </small>
+                        </div>
+                    </div>
+                </div>
 
-        <div class="row" ng-show="user.action == 'new'">
-            <div class="form-group col-sm-8">
-                <label class="control-label">Documento</label>
-                <input name="username" type="input" class="form-control" ng-model="user.data.username" required>
-                <div class="bg-danger error" ng-show="user.form.username.$invalid && user.form.submitted">
-                    <small ng-show="user.form.username.$error.required">
-                        Ingrese un documento para el asociado
-                    </small>
+                <div class="row">
+                    <div class="form-group col-sm-12">
+                        <label class="control-label">Nombre</label>
+                        <input name="name" type="input" class="form-control" ng-model="user.data.name" required>
+                        <div class="bg-danger error" ng-show="user.form.name.$invalid && user.form.submitted">
+                            <small ng-show="user.form.name.$error.required">
+                                Ingrese un nombre para el asociado
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-12">
+                        <label class="control-label">Email</label>
+                        <input name="email" type="input" class="form-control" ng-model="user.data.email" required>
+                        <div class="bg-danger error" ng-show="user.form.email.$invalid && user.form.submitted">
+                            <small ng-show="user.form.email.$error.required">
+                                Ingrese un E-mail
+                            </small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-sm-12">
+                        <label class="control-label">Género</label>
+                        <select name="gender" class="form-control" ng-model="user.data.gender" required>
+                            <option value="F">Femenino</option>
+                            <option value="M">Masculino</option>
+                        </select>
+                        <div class="bg-danger error" ng-show="user.form.gender.$invalid && user.form.submitted">
+                            <small ng-show="user.form.gender.$error.required">
+                                Seleccione un género
+                            </small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-sm-12">
+                        <label class="control-label">Fecha de nacimiento</label>
+                        <input name="birthdate" type="date" class="form-control" ng-model="user.data.birthdate" required>
+                        <div class="bg-danger error" ng-show="user.form.birthdate.$invalid && user.form.submitted">
+                            <small ng-show="user.form.birthdate.$error.required">
+                                Ingrese una fecha de nacimiento 
+                            </small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-xs-12">
+                        <button type="submit" class="btn btn-primary">{{user.action == "new" ? "Enviar" : "Editar"}}</button>
+                        &nbsp;
+                        <a href="#/cooperative/users" class="btn btn-warning">Regresar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group col-sm-4 image-review">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <label class="control-label">Imágen por aprobar</label>
+                        <div class="content-image-to-crop">
+                            {{notImage}}
+                            <img-crop image="myImage" result-image="myCroppedImage"></img-crop>
+                        </div>
+                    </div>
+                </div>
+                <div class="row cropped-actions">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <button type="button" ng-click="approve(user.data.id)" class="btn btn-primary ng-binding">Aprobar</button>
+                            <button type="button" ng-click="reject(user.data.id)" class="btn btn-warning">Rechazar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-ms-12">
+                        <img ng-src="{{myCroppedImage}}" id="croppedImage"/>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="form-group col-sm-8">
-                <label class="control-label">Nombre</label>
-                <input name="name" type="input" class="form-control" ng-model="user.data.name" required>
-                <div class="bg-danger error" ng-show="user.form.name.$invalid && user.form.submitted">
-                    <small ng-show="user.form.name.$error.required">
-                        Ingrese un nombre para el asociado
-                    </small>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-sm-8">
-                <label class="control-label">Email</label>
-                <input name="email" type="input" class="form-control" ng-model="user.data.email" required>
-                <div class="bg-danger error" ng-show="user.form.email.$invalid && user.form.submitted">
-                    <small ng-show="user.form.email.$error.required">
-                        Ingrese un E-mail
-                    </small>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group col-sm-8">
-                <label class="control-label">Género</label>
-                <select name="gender" class="form-control" ng-model="user.data.gender" required>
-                    <option value="F">Femenino</option>
-                    <option value="M">Masculino</option>
-                </select>
-                <div class="bg-danger error" ng-show="user.form.gender.$invalid && user.form.submitted">
-                    <small ng-show="user.form.gender.$error.required">
-                        Seleccione un género
-                    </small>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group col-sm-8">
-                <label class="control-label">Fecha de nacimiento</label>
-                <input name="birthdate" type="date" class="form-control" ng-model="user.data.birthdate" required>
-                <div class="bg-danger error" ng-show="user.form.birthdate.$invalid && user.form.submitted">
-                    <small ng-show="user.form.birthdate.$error.required">
-                        Ingrese una fecha de nacimiento 
-                    </small>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group col-xs-12">
-                <button type="submit" class="btn btn-primary">{{user.action == "new" ? "Enviar" : "Editar"}}</button>
-                &nbsp;
-                <a href="#/cooperative/users" class="btn btn-warning">Regresar</a>
-            </div>
-        </div>
-
     </form>
 </div>
