--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -386,9 +386,14 @@ tr.angular-ui-tree-empty {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   /* mobile webkit */
 }
-.image-review #croppedImage {
+.image-review #croppedImage,
+.image-review .croppedImage {
   visibility: hidden;
 }
 .image-review .cropped-actions {
   margin-top: 10px;
+}
+.btn-image-asociados {
+  float: right;
+  margin-left: 10px;
 }
