--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -272,10 +272,14 @@ tr.angular-ui-tree-empty {
             -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
         }
     }
-    #croppedImage{
+    #croppedImage, .croppedImage{
         visibility: hidden;
     }
     .cropped-actions{
         margin-top: 10px;
     }
+}
+.btn-image-asociados{
+    float: right;
+    margin-left: 10px;
 }
