--- a/assets/modules/user/views/list-image.html
+++ b/assets/modules/user/views/list-image.html
@@ -1,5 +1,17 @@
+<h1>Asociados 
+    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="false" ng-click="userctrl.download_data()">
+         <span class="glyphicon glyphicon-download"></span> Enviar información .xslx
+    </button>
+</h1>
 
-<form class="input-group crud-search pull-left" ng-submit="listView.search()" ng-if="listView.actions.search">
+
+
+<ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li class="active">Asociados</li>
+</ol>
+
+<form class="input-group crud-search pull-left" ng-submit="listView.search()">
     <input ng-model="listView.searchText" type="text" class="form-control" placeholder="Búsqueda"/>
     <span class="input-group-btn">
         <button title="Buscar" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
@@ -15,28 +27,19 @@
 <table class="table table-hover">
     <thead>
         <tr>
-            <th width="{{field.width}}%" ng-repeat="field in listView.fields ">
-                <a href="" ng-click="listView.order_column(field.name)">{{field.label}}</a>               
+            <th width="{{field.width}}%">
+                <a href="" ng-click="listView.order_column(field.name)">Nombre</a>               
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="element in listView.list | orderBy:listView.order.predicate:listView.order.reverse">
-            <td ng-repeat="field in listView.fields">{{element | fieldValue: field.name | fieldType: field.type | truncate:field.truncate}}</td>
-
-            <td class="text-right">
-                <a href="#{{listView.url}}/view/{{element.id}}" class="btn btn-primary btn-sm" ng-if="listView.actions.view">
-                    <span class="glyphicon glyphicon-eye-open"></span>
-                </a>
-                
-                <a href="#{{listView.url}}/edit/{{element.id}}" class="btn btn-primary btn-sm" ng-if="listView.actions.edit">
+        <tr ng-repeat="element in user">
+            <td>{{element.name}}</td>
+            <td>
+                <a href="#/cooperative/users/edit/{{element.id}}" class="btn btn-primary btn-sm ng-scope">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
-
-                <button ng-click="listView.delete(element.id, $event)" type="button" class="btn btn-danger btn-sm" ng-if="listView.actions.delete">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </button>
             </td>
         </tr>
     </tbody>
