--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -10,6 +10,7 @@
     <li><a href="#">Inicio</a></li>
     <li class="active">Asociados</li>
 </ol>
+<a href="#/cooperative/users/image" class="btn btn-info btn-image-asociados">Imagen por abrobar</a>
 
 <list-view 
     fields="[
