added date and hour to polls

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -283,3 +283,8 @@ tr.angular-ui-tree-empty {
     float: right;
     margin-left: 10px;
 }
+.date-to-publish{
+    .the-date{
+        padding: 0;
+    }
+}
